--- a/nxtecs/cybersecurity.html
+++ b/nxtecs/cybersecurity.html
@@ -38,7 +38,8 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="" /></a>
+                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
+                                    alt="" /></a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -78,7 +79,7 @@
                                 <a class="fot-twitter" href="#"><i class="fab fa-twitter"></i></a>
                                 <a class="fot-google" href="#"><i class="fab fa-youtube"></i></a>
                                 <a class="fot-insta" href="#"><i class="fab fa-instagram"></i></a>
-                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <!--<div class="header-sing d-none d-md-inline-block">
                                     <a href="contact.html"> <i class="far fa-user-circle"></i>sing in</a>
                                 </div>-->
@@ -160,7 +161,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
-                       <!-- <div class="page-title text-center">
+                        <!-- <div class="page-title text-center">
                             <h1>Cyber Security</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
@@ -181,34 +182,32 @@
                     <hr>
                     <p></p>
                 </div>
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cyber security is a fast-paced and ever-evolving landscape,
+                    where technology and ingenuity collide in a battle to protect our digital assets. As we increasingly
+                    rely on the internet and digital devices in our daily lives, the need to safeguard sensitive
+                    information from cyber attacks has become more pressing than ever before. With hackers constantly
+                    developing new methods to penetrate our systems, staying ahead of the curve requires a blend of
+                    creativity and technical know-how. But for those who rise to the challenge, the rewards are
+                    numerous, both in terms of personal and professional fulfillment, as well as the satisfaction of
+                    making the digital world a safer place for everyone.</p>
                 <br>
 
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; From artificial intelligence and machine learning to cloud
+                    security and network security, malware security and many more fields in cyber security to the use of
+                    tools and techniques like Antivirus software, PKI services, Kali Linux and many more the future of
+                    the way we protect our digital asset has become increasingly important... But the real magic of this
+                    field lies in the people behind it, the brilliant minds that work tirelessly to find new and
+                    creative ways to keep our data safe. Whether it's through the development of cutting-edge security
+                    protocols, the deployment of agile incident response teams, or simply the spread of awareness and
+                    education, the future of cybersecurity is a place of endless possibility, where anything is possible
+                    and anything is at stake.</p>
                 <br>
 
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; We are here to help you stay protected. At Nxtecs, we
+                    understand the importance of keeping your data and assets safe in today's world. Our team of experts
+                    is dedicated to providing top-notch cybersecurity solutions to keep your data, systems, and assets
+                    safe from harm. Whether you're looking to secure your data, protect your assets, or comply with
+                    industry regulations, we have a solution that's tailor-made for you</p>
                 <br>
 
             </div>
@@ -245,7 +244,7 @@
                                 <br>
                                 <button onclick="document.getElementById('id01').style.display='block'" type="button"
                                     class="block">Book a call</button>
-                                    <button onclick="document.getElementById('id02').style.display='block'" type="button"
+                                <button onclick="document.getElementById('id02').style.display='block'" type="button"
                                     class="block">Book a class</button>
                             </div>
                         </div>
@@ -268,7 +267,7 @@
                                 <span>12 years of experience</span> <br>
                                 <button onclick="document.getElementById('id01').style.display='block'" type="button"
                                     class="block">Book a call</button>
-                                    <button onclick="document.getElementById('id02').style.display='block'" type="button"
+                                <button onclick="document.getElementById('id02').style.display='block'" type="button"
                                     class="block">Book a class</button>
                             </div>
                         </div>
@@ -313,7 +312,8 @@
                                                 pattern="[0-9]{10}" required>
 
                                             <label for="email"><b>Email</b></label>
-                                            <input type="email" placeholder="Enter your email" name="email" required> <br><br>
+                                            <input type="email" placeholder="Enter your email" name="email" required>
+                                            <br><br>
 
                                             <!-- <label>
                                                 <input type="checkbox" checked="checked" name="remember"
@@ -407,7 +407,7 @@
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
                                     <strong>Email:</strong> info@nxtecs.com<br>
                                 </p>
-                                
+
                             </div>
                         </div>
 
@@ -420,8 +420,8 @@
                                 <li><i class="far fa-angle-right"></i> <a href="about_us.html" class="link">About
                                         us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Skills</a></li>
-                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html"
-                                        class="link">Contact us</a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html" class="link">Contact
+                                        us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Privacy policy</a>
                                 </li>
                             </ul>
@@ -449,7 +449,8 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email">
-                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356;"><i class="far fa-paper-plane"></i></button>
+                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356;"><i
+                                        class="far fa-paper-plane"></i></button>
                             </form>
 
                         </div>
