--- a/nxtecs/dataanalyst.html
+++ b/nxtecs/dataanalyst.html
@@ -38,7 +38,8 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="" /></a>
+                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
+                                    alt="" /></a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -78,7 +79,7 @@
                                 <a class="fot-twitter" href="#"><i class="fab fa-twitter"></i></a>
                                 <a class="fot-google" href="#"><i class="fab fa-youtube"></i></a>
                                 <a class="fot-insta" href="#"><i class="fab fa-instagram"></i></a>
-                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <!--<div class="header-sing d-none d-md-inline-block">
                                     <a href="contact.html"> <i class="far fa-user-circle"></i>sing in</a>
                                 </div>-->
@@ -161,7 +162,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
-                       <!-- <div class="page-title text-center">
+                        <!-- <div class="page-title text-center">
                             <h1>Data Analyst</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
@@ -182,35 +183,27 @@
                     <hr>
                     <p></p>
                 </div>
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Data analytics is the wizard behind the curtain of modern
+                    business success. By weaving a web of data collection, analysis, and interpretation, data analytics
+                    creates a fabric of knowledge that drives business decisions. Advanced data analytics techniques
+                    such as machine learning and statistical modeling can uncover hidden patterns and opportunities,
+                    helping businesses make informed decisions. Data analytics is an ever-evolving field, with new tools
+                    and techniques being developed to help organizations make the most of their data. By leveraging the
+                    power of data analytics, businesses can stay ahead of the competition and achieve their goals.</p>
                 <br>
 
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We at Nxtecs help businesses harness the power of data analytics
+                    to drive growth and achieve their goals. We offer a range of services including data analytics
+                    consulting, tool and technique implementation, data visualization and reporting, training and
+                    support, and custom solution development. With its deep expertise and experience, Nxtecs can help
+                    businesses of all sizes identify their goals and develop a strategy for using data analytics to
+                    achieve those goals. We also assist with the effective collection, processing, and analysis of large
+                    amounts of data, and provide meaningful insights through data visualization and reporting. By
+                    offering these services, Nxtecs helps businesses stay ahead of the competition and make informed
+                    decisions that drive growth.</p>
                 <br>
 
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
-                <br>
+
 
             </div>
 
@@ -246,7 +239,7 @@
                                 <br>
                                 <button onclick="document.getElementById('id01').style.display='block'" type="button"
                                     class="block">Book a call</button>
-                                    <button onclick="document.getElementById('id02').style.display='block'" type="button"
+                                <button onclick="document.getElementById('id02').style.display='block'" type="button"
                                     class="block">Book a class</button>
                             </div>
                         </div>
@@ -269,7 +262,7 @@
                                 <span>12 years of experience</span> <br>
                                 <button onclick="document.getElementById('id01').style.display='block'" type="button"
                                     class="block">Book a call</button>
-                                    <button onclick="document.getElementById('id02').style.display='block'" type="button"
+                                <button onclick="document.getElementById('id02').style.display='block'" type="button"
                                     class="block">Book a class</button>
                             </div>
                         </div>
@@ -314,7 +307,8 @@
                                                 pattern="[0-9]{10}" required>
 
                                             <label for="email"><b>Email</b></label>
-                                            <input type="email" placeholder="Enter your email" name="email" required> <br><br>
+                                            <input type="email" placeholder="Enter your email" name="email" required>
+                                            <br><br>
 
                                             <!-- <label>
                                                 <input type="checkbox" checked="checked" name="remember"
@@ -402,7 +396,7 @@
         </section>
         <!-- End Team Section -->
         <footer id="footer">
-            <div class="footer-top"> 
+            <div class="footer-top">
                 <br>
                 <div class="container">
                     <div class="row">
@@ -419,7 +413,7 @@
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
                                     <strong>Email:</strong> info@nxtecs.com<br>
                                 </p>
-                                
+
                             </div>
                         </div>
 
@@ -432,8 +426,8 @@
                                 <li><i class="far fa-angle-right"></i> <a href="about_us.html" class="link">About
                                         us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Skills</a></li>
-                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html"
-                                        class="link">Contact us</a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html" class="link">Contact
+                                        us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Privacy policy</a>
                                 </li>
                             </ul>
@@ -461,7 +455,8 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email">
-                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356;"><i class="far fa-paper-plane"></i></button>
+                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356;"><i
+                                        class="far fa-paper-plane"></i></button>
                             </form>
 
                         </div>
