--- a/nxtecs/devops.html
+++ b/nxtecs/devops.html
@@ -38,7 +38,8 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="" /></a>
+                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
+                                    alt="" /></a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -78,7 +79,7 @@
                                 <a class="fot-twitter" href="#"><i class="fab fa-twitter"></i></a>
                                 <a class="fot-google" href="#"><i class="fab fa-youtube"></i></a>
                                 <a class="fot-insta" href="#"><i class="fab fa-instagram"></i></a>
-                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <!--<div class="header-sing d-none d-md-inline-block">
                                     <a href="contact.html"> <i class="far fa-user-circle"></i>sing in</a>
                                 </div>-->
@@ -161,7 +162,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
-                       <!--<div class="page-title text-center">
+                        <!--<div class="page-title text-center">
                             <h1>DevOps</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
@@ -182,34 +183,27 @@
                     <hr>
                     <p></p>
                 </div>
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Welcome to the world of DevOps with Nxtecs, where innovation
+                    meets efficiency. With DevOps, companies can achieve improved agility, better collaboration, and
+                    increased efficiency, allowing them to stay ahead of the competition and meet the demands of the
+                    rapidly changing technology landscape. Get ready to transform the way you work with DevOps</p>
                 <br>
 
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; As technology continues to drive the pace of business, DevOps
+                    is leading the charge toward a new era of software delivery - one that is faster, more efficient,
+                    and more reliable than ever before. With DevOps at the forefront, companies will be empowered to
+                    take on the impossible and deliver the impossible, creating digital experiences that inspire and
+                    engage customers like never before.</p>
                 <br>
 
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; At Nxtecs, we believe that DevOps is more than just a set of
+                    processes and tools. It's a culture of collaboration, automation, and continuous improvement. Our
+                    DevOps services go beyond simply automating workflows. We work closely with our clients to
+                    understand their unique challenges and goals, and design custom solutions that fit their specific
+                    needs. From cloud migrations to infrastructure automation, our team of experts has the skills and
+                    experience to help you achieve your objectives and stay ahead of the curve. With Nxtecs, you'll
+                    receive end-to-end support and ongoing guidance, ensuring your DevOps journey is a success from
+                    start to finish.</p>
                 <br>
 
             </div>
@@ -354,13 +348,15 @@
 
                                             <label for="phone"><b>Mobile number</b></label>
                                             <input type="tel" maxlength="10" max="9" min="1" size="1"
-                                                placeholder="Enter Mobile number" name="phone" pattern="[0-9]{10}"  required>
+                                                placeholder="Enter Mobile number" name="phone" pattern="[0-9]{10}"
+                                                required>
 
                                             <label for="email"><b>Email</b></label>
                                             <input type="email" placeholder="Enter your email" name="email" required>
 
                                             <label for="address"><b>City</b></label> <br>
-                                            <select type="address" name="address" required style="width: 300px !important;">
+                                            <select type="address" name="address" required
+                                                style="width: 300px !important;">
                                                 <option selected value="1">Hyderabad</option>
                                                 <option value="2">Bangalore</option>
                                                 <option value="2">Mumbai</option>
@@ -393,7 +389,7 @@
         </section>
 
         <!-- End Team Section -->
-        
+
         <footer id="footer">
             <div class="footer-top">
                 <div class="container">
@@ -411,7 +407,7 @@
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
                                     <strong>Email:</strong> info@nxtecs.com<br>
                                 </p>
-                               
+
                             </div>
                         </div>
 
@@ -424,8 +420,8 @@
                                 <li><i class="far fa-angle-right"></i> <a href="about_us.html" class="link">About
                                         us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Skills</a></li>
-                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html"
-                                        class="link">Contact us</a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html" class="link">Contact
+                                        us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Privacy policy</a>
                                 </li>
                             </ul>
@@ -453,7 +449,8 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email">
-                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356;"><i class="far fa-paper-plane"></i></button>
+                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356;"><i
+                                        class="far fa-paper-plane"></i></button>
                             </form>
                         </div>
 
