--- a/nxtecs/python.html
+++ b/nxtecs/python.html
@@ -38,7 +38,8 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="" /></a>
+                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
+                                    alt="" /></a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -78,7 +79,7 @@
                                 <a class="fot-twitter" href="#"><i class="fab fa-twitter"></i></a>
                                 <a class="fot-google" href="#"><i class="fab fa-youtube"></i></a>
                                 <a class="fot-insta" href="#"><i class="fab fa-instagram"></i></a>
-                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <!--<div class="header-sing d-none d-md-inline-block">
                                     <a href="contact.html"> <i class="far fa-user-circle"></i>sing in</a>
                                 </div>-->
@@ -161,7 +162,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
-                       <!-- <div class="page-title text-center">
+                        <!-- <div class="page-title text-center">
                             <h1>Python</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
@@ -182,36 +183,24 @@
                     <hr>
                     <p></p>
                 </div>
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python is a versatile programming language that has a simple
+                    and clean syntax making it a very powerful tool for businesses to use Whether you're looking to
+                    automate tasks, develop a web application, or delve into data analysis, python provides a powerful
+                    platform that can help you achieve your goals. it is a popular choice for businesses to integrate
+                    into their technology stack</p>
                 <br>
 
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
+                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nxtecs is the bridge connecting businesses with the limitless
+                    potential of python. We provide an array of services, ranging from python consulting to custom
+                    application development and everything in between. Our expertise allows us to help businesses
+                    automate tasks, build custom web applications, harness data science and machine learning, and
+                    integrate with other systems. At Nxtecs we equip businesses with the knowledge and skills they need
+                    to take their python capabilities to new heights. We are more than just a service provider, we are a
+                    catalyst for growth and success, to help you unleash the limitless potential of python and conquer
+                    the future for your business...</p>
                 <br>
 
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Tempora, ducimus a. Numquam debitis eum nostrum
-                    porro obcaecati tenetur, eius amet inventore, architecto ipsum, dolores reprehenderit maiores veniam
-                    rem
-                    ipsa dignissimos quas tempore ut sunt nulla officia odit beatae velit. Ipsa non harum enim aut
-                    excepturi
-                    minima dolorem aperiam? Facilis porro quam quidem nostrum repudiandae repellendus iure, ducimus
-                    perspiciatis unde cum.</p>
-                <br>
-
+               
             </div>
 
         </section>
@@ -246,7 +235,7 @@
                                 <br>
                                 <button onclick="document.getElementById('id01').style.display='block'" type="button"
                                     class="block">Book a call</button>
-                                    <button onclick="document.getElementById('id02').style.display='block'" type="button"
+                                <button onclick="document.getElementById('id02').style.display='block'" type="button"
                                     class="block">Book a class</button>
                             </div>
                         </div>
@@ -269,7 +258,7 @@
                                 <span>12 years of experience</span> <br>
                                 <button onclick="document.getElementById('id01').style.display='block'" type="button"
                                     class="block">Book a call</button>
-                                    <button onclick="document.getElementById('id02').style.display='block'" type="button"
+                                <button onclick="document.getElementById('id02').style.display='block'" type="button"
                                     class="block">Book a class</button>
                             </div>
                         </div>
@@ -314,7 +303,8 @@
                                                 pattern="[0-9]{10}" required>
 
                                             <label for="email"><b>Email</b></label>
-                                            <input type="email" placeholder="Enter your email" name="email" required> <br><br>
+                                            <input type="email" placeholder="Enter your email" name="email" required>
+                                            <br><br>
 
                                             <!-- <label>
                                                 <input type="checkbox" checked="checked" name="remember"
@@ -418,7 +408,7 @@
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
                                     <strong>Email:</strong> info@nxtecs.com<br>
                                 </p>
-                                
+
                             </div>
                         </div>
 
@@ -431,8 +421,8 @@
                                 <li><i class="far fa-angle-right"></i> <a href="about_us.html" class="link">About
                                         us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Skills</a></li>
-                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html"
-                                        class="link">Contact us</a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html" class="link">Contact
+                                        us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Privacy policy</a>
                                 </li>
                             </ul>
@@ -460,7 +450,8 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email">
-                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356;"><i class="far fa-paper-plane"></i></button>
+                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356;"><i
+                                        class="far fa-paper-plane"></i></button>
                             </form>
                         </div>
 
