--- a/singlepage.html
+++ b/singlepage.html
@@ -11,16 +11,43 @@
 </head>
 
 <body>
-    <section id="first">
+    <section class="showcase">
+        <header>
+            <h2 class="logo">KITCHEN</h2>
+            <div class="TOGGLE"></div>
+        </header>
+
+        <video src="./../food-reel-2020.mp4"></video>
+        <div class="overlay"></div>
+        <div class="text">
+            <h2>OUR KITCHEN</h2>
+            <h3>Is top-notch</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab aliquid consequatur quae
+                possimus blanditiis at quas beatae impedit necessitatibus.</p>
+            <a href="">Explore</a>
+
+        </div>
+    </section>
+    <div class="menu">
+        <ul>
+            <li><a href="#"></a>Home</li>
+            <li><a href="#"></a>about</li>
+            <li><a href="#"></a>Services</li>
+            <li><a href="#"></a>Blog</li>
+        </ul>
+    </div>
+
+
+
+
+    <!--<section id="first">
         <iframe width="100%" height="700" src="https://www.youtube.com/embed/m0Zh7MEIdac?start=4"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+            title="YouTube video player" frameborder="0" ></iframe>
         <div class="text-overlay">
             <h1>Kitchen Services</h1>
             <p>We bring the best to your kitchen</p>
         </div>
-    </section>
+    </section> 
 
     <section id="second">
         <h2>Why are we !</h2> <br>
@@ -28,7 +55,7 @@
             experienced chefs and kitchen specialists strive to bring the best to your kitchen every day.</p>
     </section>
 
-   <!-- <section id="third">
+    <!-- <section id="third">
         <h2>Comparisons</h2>
         <table>
           <tr>
@@ -56,8 +83,8 @@
             <td>Moderately priced</td>
           </tr>
         </table>
-      </section> -->
-      
+      </section> 
+
 
     <div class="services">
         <h1>Our Services</h1>
@@ -97,7 +124,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
 
