--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="./fastkart/front-end/index.html">E-COMMERCE</a></li>
             <li><a href="./fastkart/front-end/index-2.html">E-COMMERCE-2</a></li>
             <li><a href="./kinder/preview.colorlib.com/theme/kindergarten/index.html">PRE-SCHOOL</a></li>
+            <li><a href="./single/singlepage.html">single page</a></li>
             
         </ol>
     </section>
