--- a/fastkart/front-end/shop-left-sidebar.html
+++ b/fastkart/front-end/shop-left-sidebar.html
@@ -62,7 +62,7 @@
     <header class="pb-md-4 pb-0">
         <div class="header-top">
             <div class="container-fluid-lg">
-                <div class="row">
+               <!-- <div class="row">
                     <div class="col-xxl-3 d-xxl-block d-none">
                         <div class="top-left-header">
                             <i class="iconly-Location icli text-white"></i>
@@ -152,7 +152,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -868,7 +868,7 @@
                                                 <a class="nav-link dropdown-toggle ps-xl-2 ps-0"
                                                     href="javascript:void(0)" data-bs-toggle="dropdown">Mega Menu</a>
 
-                                                <div class="dropdown-menu dropdown-menu-2">
+                                               <!-- <div class="dropdown-menu dropdown-menu-2">
                                                     <div class="row">
                                                         <div class="dropdown-column col-xl-3">
                                                             <h5 class="dropdown-header">Daily Vegetables</h5>
@@ -938,7 +938,7 @@
 
                                                         <div class="dropdown-column dropdown-column-img col-3"></div>
                                                     </div>
-                                                </div>
+                                                </div> -->
                                             </li>
 
                                             <li class="nav-item dropdown">
