--- a/fastkart/front-end/index.html
+++ b/fastkart/front-end/index.html
@@ -171,7 +171,7 @@
                                 </span>
                             </button>
                             <a href="index.html" class="web-logo nav-logo">
-                                <img src="../assets/images/logo/1.png" class="img-fluid blur-up lazyload" alt="LOGO">
+                                <img src="#" class="img-fluid blur-up lazyload" alt="&nbsp; MYKART">
                             </a>
 
                             <div class="middle-box">
@@ -3849,7 +3849,7 @@
                         <div class="footer-logo">
                             <div class="theme-logo">
                                 <a href="index.html">
-                                    <img src="../assets/images/logo/1.png" class="blur-up lazyload" alt="">
+                                    <img src="#" class="blur-up lazyload" alt="&nbsp; MYKART">
                                 </a>
                             </div>
 
@@ -3864,7 +3864,7 @@
                                     </li>
                                     <li>
                                         <i data-feather="mail"></i>
-                                        <a href="javascript:void(0)">support@fastkart.com</a>
+                                        <a href="javascript:void(0)">support@mykart.com</a>
                                     </li>
                                 </ul>
                             </div>
@@ -3977,7 +3977,7 @@
                                         <i data-feather="mail"></i>
                                         <div class="contact-number">
                                             <h6 class="text-content">Email Address :</h6>
-                                            <h5>fastkart@hotmail.com</h5>
+                                            <h5>mykart@hotmail.com</h5>
                                         </div>
                                     </div>
                                 </li>
@@ -4007,7 +4007,7 @@
 
             <div class="sub-footer section-small-space">
                 <div class="reserve">
-                    <h6 class="text-content">©2022 Fastkart All rights reserved</h6>
+                    <h6 class="text-content">©2022 mykart All rights reserved</h6>
                 </div>
 
                 <div class="payment">
