--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <li><a href="./nxtecs/index.html">NXTECS</a></li>
             <li><a href="./preview.colorlib.com/theme/instylr/index.html">BOTIQUE</a></li>
             <li><a href="./fastkart/front-end/index.html">E-COMMERCE</a></li>
-            <li><a href="./fastkart/front-end/index-2.html">E-COMMERCE-2</a></li>
+            <!--<li><a href="./fastkart/front-end/index-2.html">E-COMMERCE-2</a></li> -->
             <li><a href="./kinder/preview.colorlib.com/theme/kindergarten/index.html">PRE-SCHOOL</a></li>
-            <li><a href="./single/singlepage.html">single page</a></li>
+           <!-- <li><a href="./single/singlepage.html">single page</a></li> -->
             
         </ol>
     </section>
