--- a/fastkart/front-end/index.html
+++ b/fastkart/front-end/index.html
@@ -24,6 +24,7 @@
         href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
         rel="stylesheet">
 
+        
     <!-- bootstrap css -->
     <link id="rtl-link" rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
 
@@ -1618,7 +1619,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -1706,7 +1707,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -1798,7 +1799,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -1890,7 +1891,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -1982,7 +1983,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -2071,7 +2072,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -2166,7 +2167,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -2254,7 +2255,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -2347,7 +2348,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -2435,7 +2436,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -2528,7 +2529,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -2617,7 +2618,7 @@
 
                                                         <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                             title="Compare">
-                                                            <a href="compare.html">
+                                                            <a href="#">
                                                                 <i data-feather="refresh-cw"></i>
                                                             </a>
                                                         </li>
@@ -2834,7 +2835,7 @@
 
                                                     <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                         title="Compare">
-                                                        <a href="compare.html">
+                                                        <a href="#">
                                                             <i data-feather="refresh-cw"></i>
                                                         </a>
                                                     </li>
@@ -2925,7 +2926,7 @@
 
                                                     <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                         title="Compare">
-                                                        <a href="compare.html">
+                                                        <a href="#">
                                                             <i data-feather="refresh-cw"></i>
                                                         </a>
                                                     </li>
@@ -3016,7 +3017,7 @@
 
                                                     <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                         title="Compare">
-                                                        <a href="compare.html">
+                                                        <a href="#">
                                                             <i data-feather="refresh-cw"></i>
                                                         </a>
                                                     </li>
@@ -3107,7 +3108,7 @@
 
                                                     <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                         title="Compare">
-                                                        <a href="compare.html">
+                                                        <a href="#">
                                                             <i data-feather="refresh-cw"></i>
                                                         </a>
                                                     </li>
@@ -3198,7 +3199,7 @@
 
                                                     <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                         title="Compare">
-                                                        <a href="compare.html">
+                                                        <a href="#">
                                                             <i data-feather="refresh-cw"></i>
                                                         </a>
                                                     </li>
@@ -3289,7 +3290,7 @@
 
                                                     <li data-bs-toggle="tooltip" data-bs-placement="top"
                                                         title="Compare">
-                                                        <a href="compare.html">
+                                                        <a href="#">
                                                             <i data-feather="refresh-cw"></i>
                                                         </a>
                                                     </li>
@@ -4058,14 +4059,14 @@
                     <div class="row g-sm-4 g-2">
                         <div class="col-lg-6">
                             <div class="slider-image">
-                                <img src="../assets/images/product/category/1.jpg" class="img-fluid blur-up lazyload"
+                                <img src="../pngtree-nuts-a-basket-of-peanuts-png-image_3922532 (1).jpg" class="img-fluid blur-up lazyload"
                                     alt="">
                             </div>
                         </div>
 
                         <div class="col-lg-6">
                             <div class="right-sidebar-modal">
-                                <h4 class="title-name">Peanut Butter Bite Premium Butter Cookies 600 g</h4>
+                                <h4 class="title-name">Basket of peanuts 600 g</h4>
                                 <h4 class="price">Rs.36.99</h4>
                                 <div class="product-rating">
                                     <ul class="rating">
