--- a/fastkart/front-end/index.html
+++ b/fastkart/front-end/index.html
@@ -1399,7 +1399,7 @@
 
                         <div class="ratio_156 section-t-space">
                             <div class="home-contain hover-effect">
-                                <img src="../assets/images/vegetable/banner/8.jpg" class="bg-img blur-up lazyload"
+                                <img src="../assets/images/vegetable/banner/fish.png" class="bg-img blur-up lazyload"
                                     alt="">
                                 <div class="home-detail p-top-left home-p-medium">
                                     <div>
@@ -1535,7 +1535,7 @@
                                                 class="img-fluid blur-up lazyload" alt="">
                                         </div>
                                         <div class="review-detail">
-                                            <h5>Tina Mcdonnale</h5>
+                                            <h5>Vichitritha</h5>
                                             <h6>Sale Manager</h6>
                                         </div>
                                     </div>
