--- a/preview.colorlib.com/theme/instylr/index.html
+++ b/preview.colorlib.com/theme/instylr/index.html
@@ -34,8 +34,8 @@
   <header class="header-section">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark site-navbar">
       <a class="navbar-brand site-logo" href="index.html#">
-        <h2><span>LO</span>GO</h2>
-        <p>Fashion Designers</p>
+        <h2><span>Boutique</span>Prism</h2>
+        <p>The Exclusive Fashion brand</p>
       </a>
       <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
         aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +78,7 @@
       <div class="hs-item set-bg" data-setbg="img/slider/1.jpg" data-hash="slide-1">
         <div class="container">
           <h2>Style is forever</h2>
-          <a href="#" class="site-btn">Read More <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" class="site-btn">SHOP NOW <i class="fa fa-angle-double-right"></i></a>
         </div>
         <div class="next-hs set-bg" data-setbg="img/slider/2.jpg">
           <a href="#slide-2" class="nest-hs-btn">Next</a>
@@ -87,7 +87,7 @@
       <div class="hs-item set-bg" data-setbg="img/slider/2.jpg" data-hash="slide-2">
         <div class="container">
           <h2>Style is forever</h2>
-          <a href="#" class="site-btn">Read More <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" class="site-btn">SHOP NOW <i class="fa fa-angle-double-right"></i></a>
         </div>
         <div class="next-hs set-bg" data-setbg="img/slider/1.jpg">
           <a href="#slide-1" class="nest-hs-btn">Next</a>
@@ -269,9 +269,9 @@
         <div class="col-lg-3 col-sm-6">
           <div class="footer-widget fw-about">
             <a class="navbar-brand site-logo" href="index.html#">
-              <h2><span>LOGO</span></h2>
+              <h2><span>BOUTIQUE PRISM</span></h2>
             </a>
-            <p>Fashion Designers</p>
+            <p>The Exclusive Fashion Brand</p>
 
             <p>Velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget
               malesu ada. In arcu justo, sagittis consequat pulvinar.</p>
