--- a/preview.colorlib.com/theme/instylr/blog.html
+++ b/preview.colorlib.com/theme/instylr/blog.html
@@ -89,21 +89,21 @@
 
   <section class="hero-section " style="padding-top: 30px; display: flex;" >
     <div class="hero-slider owl-carousel">
-      <div class="hs-item set-bg" data-setbg="img/slider/1.jpg" data-hash="slide-1" style="height: 600px;">
+      <div class="hs-item set-bg" data-setbg="" data-hash="slide-1" style="height: 600px;">
         <div class="container">
-          <h2>The ultimate guide to handbags</h2> <br>
-          <h4 style="color: white;">What bag to choose and when to wear it</h4> <br>
-          <a href="#" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
-          <a href="#" class="site-btn">Shop the looks <i class="fa fa-angle-double-right"></i></a>
+          <h2 style="color: black;">The ultimate guide to handbags</h2> <br>
+          <h4 style="color: black;">What bag to choose and when to wear it</h4> <br>
+          <a href="#" style="color: black;" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black;" class="site-btn">Shop the looks <i class="fa fa-angle-double-right"></i></a>
         </div>
 
       </div>
-      <div class="hs-item set-bg" data-setbg="img/slider/2.jpg" data-hash="slide-2" style="height: 600px;">
+      <div class="hs-item set-bg" data-setbg="" data-hash="slide-2" style="height: 600px;">
         <div class="container">
-          <h2>Men's capsule wardrobe</h2> <br>
-          <h4 style="color: white;">A capsule wardrobe is a versatile, stylish and sustainable way to shop</h4> <br>
-          <a href="#" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
-          <a href="#" class="site-btn">Shop the looks <i class="fa fa-angle-double-right"></i></a>
+          <h2 style="color: black;">Men's capsule wardrobe</h2> <br>
+          <h4 style="color: black;">A capsule wardrobe is a versatile, stylish and sustainable way to shop</h4> <br>
+          <a href="#" style="color: black;" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black;" class="site-btn">Shop the looks <i class="fa fa-angle-double-right"></i></a>
         </div>
 
       </div>
