--- a/preview.colorlib.com/theme/instylr/about.html
+++ b/preview.colorlib.com/theme/instylr/about.html
@@ -94,10 +94,14 @@
         <div class="col-lg-7 order-2 order-lg-1 intro-text">
           <span>Botiqueprism is a fashion brand,</span>
           <h2>"Offering the latest styles and inspiration for all — always."</h2>
-          <p>Customers will find 
-            everything from fashion pieces and unique designer collaborations to affordable wardrobe essentials, complete-thelook accessories and motivational workout wear. All seasons, all styles, all welcome! But Botiqueprism is more than 
-            just fashion. With price, quality and sustainability deeply rooted in its DNA, botiqueprism is not only a possibility for 
-            everyone to explore their personal style, but it also offers a chance to create a more sustainable fashion future. Visit 
+          <p>Customers will find
+            everything from fashion pieces and unique designer collaborations to affordable wardrobe essentials,
+            complete-thelook accessories and motivational workout wear. All seasons, all styles, all welcome! But
+            Botiqueprism is more than
+            just fashion. With price, quality and sustainability deeply rooted in its DNA, botiqueprism is not only a
+            possibility for
+            everyone to explore their personal style, but it also offers a chance to create a more sustainable fashion
+            future. Visit
             hm.com for more information or follow @botiqueprism for daily inspiration</p>
           <a href="#" class="site-btn sb-dark">Read More <i class="fa fa-angle-double-right"></i></a>
         </div>
@@ -189,14 +193,14 @@
           <div class="brand-history-item">
             <h2>2005</h2>
             <h4>The Boutiqueprism goes both west and east </h4>
-            <p>New brands are added to the family, and Karl Lagerfeld makes a surprising 
+            <p>New brands are added to the family, and Karl Lagerfeld makes a surprising
               announcement to the world of fashion.
-              </p>
+            </p>
           </div>
           <div class="brand-history-item">
             <h2>2010 and onwards</h2>
             <h4>Boutiqueprism opens the first stores </h4>
-            <p>In the Southern hemisphere, old garments are given a new life and & Other 
+            <p>In the Southern hemisphere, old garments are given a new life and & Other
               Stories is launched, followed by ARKET.</p>
           </div>
         </div>
@@ -224,8 +228,8 @@
             </a>
             <p>The Exclusive Fashion Brand</p>
 
-            <p>Velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget
-              malesu ada. In arcu justo, sagittis consequat pulvinar.</p>
+            <p>The ExclusiveBotiqueprism is a fashion brand, offering the latest styles and inspiration for all —
+              always. Fashion Brand.</p>
             <div class="fw-social">
               <a href="#"><i class="fa fa-pinterest"></i></a>
               <a href="#"><i class="fa fa-facebook"></i></a>
