--- a/preview.colorlib.com/theme/instylr/index.html
+++ b/preview.colorlib.com/theme/instylr/index.html
@@ -273,8 +273,8 @@
             </a>
             <p>The Exclusive Fashion Brand</p>
 
-            <p>Velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget
-              malesu ada. In arcu justo, sagittis consequat pulvinar.</p>
+            <p>The ExclusiveBotiqueprism is a fashion brand, offering the latest styles and inspiration for all —
+              always. Fashion Brand.</p>
             <div class="fw-social">
               <a href="#"><i class="fa fa-pinterest"></i></a>
               <a href="#"><i class="fa fa-facebook"></i></a>
@@ -319,7 +319,7 @@
             <h2 class="fw-title">Contact</h2>
             <ul>
               <li><span>Address:</span> SE-106 38, Stockholm SWEDEN
-</li>
+              </li>
               <li><span>Phone:</span>+546 990221 123</li>
               <li><span>Mail:</span><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection"
                   class="__cf_email__" data-cfemail="a5c8cac1c0c9e5c6cacbd1c4c6d18bc6cac8">[email&#160;protected]</a>
