--- a/preview.colorlib.com/theme/instylr/portfolio.html
+++ b/preview.colorlib.com/theme/instylr/portfolio.html
@@ -90,7 +90,7 @@
 
   <div class="portfolio-page">
     <ul class="portfolio-cata">
-      <li class="active"><a href="#">Spring / Summer 2019</a></li>
+      <li><a href="#">Spring / Summer 2019</a></li>
       <li><a href="#">Winter Collection</a></li>
       <li><a href="#">Cruise Collection</a></li>
       <li><a href="#">Men Collection</a></li>
@@ -125,16 +125,17 @@
         <div class="col-lg-3 col-sm-6">
           <div class="footer-widget fw-about">
             <a class="navbar-brand site-logo" href="index.html#">
-              <h2><span>BOUTIQUE PRISM</span></h2> </a>
-              <p>The Exclusive Fashion Brand</p>
+              <h2><span>BOUTIQUE PRISM</span></h2>
+            </a>
+            <p>The Exclusive Fashion Brand</p>
 
-            <p>Velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget
-              malesu ada. In arcu justo, sagittis consequat pulvinar.</p>
+            <p>The ExclusiveBotiqueprism is a fashion brand, offering the latest styles and inspiration for all —
+              always. Fashion Brand.</p>
             <div class="fw-social">
               <a href="#"><i class="fa fa-pinterest"></i></a>
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
-             <!-- <a href="#"><i class="fa fa-dribbble"></i></a>-->
+              <!-- <a href="#"><i class="fa fa-dribbble"></i></a>-->
               <a href="#"><i class="fa fa-behance"></i></a>
             </div>
           </div>
@@ -148,7 +149,7 @@
             </div>
             <div class="rp-item">
               <h4>About Our Fashion App</h4>
-             <!-- <span>20 January 2019</span>-->
+              <!-- <span>20 January 2019</span>-->
             </div>
             <div class="rp-item">
               <h4>Simple Blog Post</h4>
