--- a/preview.colorlib.com/theme/instylr/blog.html
+++ b/preview.colorlib.com/theme/instylr/blog.html
@@ -87,7 +87,7 @@
     </div>
   </section>
 
-  <section class="hero-section " style="padding-top: 30px; display: flex;" >
+  <section class="hero-section " style="padding-top: 30px; display: flex;">
     <div class="hero-slider owl-carousel">
       <div class="hs-item set-bg" data-setbg="" data-hash="slide-1" style="height: 400px;">
         <div class="container">
@@ -385,8 +385,8 @@
             </a>
             <p>The Exclusive Fashion Brand</p>
 
-            <p>Velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget
-              malesu ada. In arcu justo, sagittis consequat pulvinar.</p>
+            <p>The ExclusiveBotiqueprism is a fashion brand, offering the latest styles and inspiration for all —
+              always. Fashion Brand.</p>
             <div class="fw-social">
               <a href="#"><i class="fa fa-pinterest"></i></a>
               <a href="#"><i class="fa fa-facebook"></i></a>
