--- a/preview.colorlib.com/theme/instylr/contact.html
+++ b/preview.colorlib.com/theme/instylr/contact.html
@@ -50,7 +50,7 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">the Brand</a>
           </li>
-           <!-- <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>-->
           <li class="nav-item">
@@ -146,11 +146,12 @@
         <div class="col-lg-3 col-sm-6">
           <div class="footer-widget fw-about">
             <a class="navbar-brand site-logo" href="index.html#">
-              <h2><span>BOUTIQUE PRISM</span></h2> </a>
-              <p>The Exclusive Fashion Brand</p>
+              <h2><span>BOUTIQUE PRISM</span></h2>
+            </a>
+            <p>The Exclusive Fashion Brand</p>
 
-            <p>Velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget
-              malesu ada. In arcu justo, sagittis consequat pulvinar.</p>
+            <p>The ExclusiveBotiqueprism is a fashion brand, offering the latest styles and inspiration for all —
+              always. Fashion Brand.</p>
             <div class="fw-social">
               <a href="#"><i class="fa fa-pinterest"></i></a>
               <a href="#"><i class="fa fa-facebook"></i></a>
@@ -173,7 +174,7 @@
             </div>
             <div class="rp-item">
               <h4>Simple Blog Post</h4>
-             <!-- <span>20 January 2019</span>-->
+              <!-- <span>20 January 2019</span>-->
             </div>
           </div>
         </div>
