--- a/preview.colorlib.com/theme/instylr/single-blog.html
+++ b/preview.colorlib.com/theme/instylr/single-blog.html
@@ -278,16 +278,17 @@
         <div class="col-lg-3 col-sm-6">
           <div class="footer-widget fw-about">
             <a class="navbar-brand site-logo" href="index.html#">
-              <h2><span>BOUTIQUE PRISM</span></h2> </a>
-              <p>The Exclusive Fashion Brand</p>
+              <h2><span>BOUTIQUE PRISM</span></h2>
+            </a>
+            <p>The Exclusive Fashion Brand</p>
 
-            <p>Velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget
-              malesu ada. In arcu justo, sagittis consequat pulvinar.</p>
+            <p>The ExclusiveBotiqueprism is a fashion brand, offering the latest styles and inspiration for all —
+              always. Fashion Brand.</p>
             <div class="fw-social">
               <a href="#"><i class="fa fa-pinterest"></i></a>
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
-             <!-- <a href="#"><i class="fa fa-dribbble"></i></a>-->
+              <!-- <a href="#"><i class="fa fa-dribbble"></i></a>-->
               <a href="#"><i class="fa fa-behance"></i></a>
             </div>
           </div>
