--- a/preview.colorlib.com/theme/instylr/contact.html
+++ b/preview.colorlib.com/theme/instylr/contact.html
@@ -122,10 +122,10 @@
             <p>Aenean quis velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel
               justo eget malesuada. In arcu justo, sagittis consequat pulvinar quis, pretium quis massa. </p>
             <ul>
-              <li>Main Str, no 23, New York</li>
+              <li>SE-106 38, Stockholm SWEDEN</li>
               <li>+546 990221 123</li>
               <li><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="6d0b0c1e050402032d0e0203190c0e19430e0200">[email&#160;protected]</a></li>
+                  data-cfemail="6d0b0c1e050402032d0e0203190c0e19430e0200"> pradeepl220220@gmail.com</a></li>
             </ul>
           </div>
         </div>
@@ -195,10 +195,9 @@
           <div class="footer-widget contact-widget">
             <h2 class="fw-title">Contact</h2>
             <ul>
-              <li><span>Address:</span>Main Str, no 23, New York</li>
+              <li><span>Address:</span>SE-106 38, Stockholm SWEDEN</li>
               <li><span>Phone:</span>+546 990221 123</li>
-              <li><span>Mail:</span><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection"
-                  class="__cf_email__" data-cfemail="9df0f2f9f8f1ddfef2f3e9fcfee9b3fef2f0">[email&#160;protected]</a>
+              <li><span>Mail:</span> pradeepl220220@gmail.com
               </li>
             </ul>
           </div>
