--- a/preview.colorlib.com/theme/instylr/index.html
+++ b/preview.colorlib.com/theme/instylr/index.html
@@ -301,7 +301,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-2 col-sm-6">
           <div class="footer-widget">
             <h2 class="fw-title">Usefull Links</h2>
             <ul>
@@ -314,16 +314,14 @@
             </ul>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <div class="footer-widget contact-widget">
             <h2 class="fw-title">Contact</h2>
             <ul>
               <li><span>Address:</span> SE-106 38, Stockholm SWEDEN
               </li>
               <li><span>Phone:</span>+546 990221 123</li>
-              <li><span>Mail:</span><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection"
-                  class="__cf_email__" data-cfemail="a5c8cac1c0c9e5c6cacbd1c4c6d18bc6cac8">[email&#160;protected]</a>
-              </li>
+              <li><span>Mail:</span>pradeepl220220@gmail.com</li>
             </ul>
           </div>
         </div>
