--- a/preview.colorlib.com/theme/instylr/about.html
+++ b/preview.colorlib.com/theme/instylr/about.html
@@ -273,11 +273,13 @@
           <div class="footer-widget contact-widget">
             <h2 class="fw-title">Contact</h2>
             <ul>
-              <li><span>Address:</span>Main Str, no 23, New York</li>
+              <li><span>Address:</span>SE-106 38, Stockholm SWEDEN</li>
               <li><span>Phone:</span>+546 990221 123</li>
-              <li><span>Mail:</span><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection"
+             <!-- <li><span>Mail:</span><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection"
                   class="__cf_email__" data-cfemail="d2bfbdb6b7be92b1bdbca6b3b1a6fcb1bdbf">[email&#160;protected]</a>
-              </li>
+              </li> -->
+              <li><span>Mail:</span> pradeepl220220@gmail.com
+            </li>
             </ul>
           </div>
         </div>
