--- a/preview.colorlib.com/theme/instylr/portfolio.html
+++ b/preview.colorlib.com/theme/instylr/portfolio.html
@@ -174,10 +174,9 @@
           <div class="footer-widget contact-widget">
             <h2 class="fw-title">Contact</h2>
             <ul>
-              <li><span>Address:</span>Main Str, no 23, New York</li>
+              <li><span>Address:</span>SE-106 38, Stockholm SWEDEN</li>
               <li><span>Phone:</span>+546 990221 123</li>
-              <li><span>Mail:</span><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection"
-                  class="__cf_email__" data-cfemail="721f1d16171e32111d1c061311065c111d1f">[email&#160;protected]</a>
+              <li><span>Mail:</span> pradeepl220220@gmail.com
               </li>
             </ul>
           </div>
