--- a/preview.colorlib.com/theme/instylr/single-blog.html
+++ b/preview.colorlib.com/theme/instylr/single-blog.html
@@ -327,11 +327,9 @@
           <div class="footer-widget contact-widget">
             <h2 class="fw-title">Contact</h2>
             <ul>
-              <li><span>Address:</span>Main Str, no 23, New York</li>
+              <li><span>Address:</span>SE-106 38, Stockholm SWEDEN</li>
               <li><span>Phone:</span>+546 990221 123</li>
-              <li><span>Mail:</span><a href="https://preview.colorlib.com/cdn-cgi/l/email-protection"
-                  class="__cf_email__" data-cfemail="533e3c37363f13303c3d273230277d303c3e">[email&#160;protected]</a>
-              </li>
+              <li><span>Mail:</span> pradeepl220220@gmail.com </li>
             </ul>
           </div>
         </div>
