--- a/preview.colorlib.com/theme/instylr/blog.html
+++ b/preview.colorlib.com/theme/instylr/blog.html
@@ -93,8 +93,8 @@
         <div class="container">
           <h2 style="color: black;">The ultimate guide to handbags</h2> <br>
           <h4 style="color: black;">What bag to choose and when to wear it</h4> <br>
-          <a href="#" style="color: black;" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
-          <a href="#" style="color: black;" class="site-btn">Shop the looks <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Shop the looks <i class="fa fa-angle-double-right"></i></a>
         </div>
 
       </div>
@@ -102,8 +102,8 @@
         <div class="container">
           <h2 style="color: black;">Men's capsule wardrobe</h2> <br>
           <h4 style="color: black;">A capsule wardrobe is a versatile, stylish and sustainable way to shop</h4> <br>
-          <a href="#" style="color: black;" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
-          <a href="#" style="color: black;" class="site-btn">Shop the looks <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Shop the looks <i class="fa fa-angle-double-right"></i></a>
         </div>
 
       </div>
