--- a/preview.colorlib.com/theme/instylr/blog.html
+++ b/preview.colorlib.com/theme/instylr/blog.html
@@ -107,14 +107,13 @@
         </div>
 
       </div>
-      <div class="hs-item set-bg" data-setbg="img/slider/2.jpg" data-hash="slide-2" style="height: 400px;">
+      <div class="hs-item set-bg" data-setbg="" data-hash="slide-2" style="height: 400px;">
         <div class="container">
-          <h2>How to reinvent your summer staples
-          </h2> <br>
-          <h4 style="color: white;">An extraordinary summer calls for a different approach to new season dressing.
+          <h2 style="color: black;">How to reinvent your summer staples </h2> <br>
+          <h4 style="color: black;">An extraordinary summer calls for a different approach to new season dressing.
             See how to make your old favorites feel on trend again,</h4> <br>
-          <a href="#" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
-          <a href="#" class="site-btn">Shop for looks <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Shop for looks <i class="fa fa-angle-double-right"></i></a>
         </div>
 
       </div>
@@ -432,7 +431,7 @@
             <ul>
               <li><span>Address:</span>SE-106 38, Stockholm SWEDEN</li>
               <li><span>Phone:</span>+546 990221 123</li>
-              <li><span>Mail:</span> pradeepl220220@gmail.com </li>
+              <li><span>Mail:</span> pradeepl2020@gmail.com </li>
             </ul>
           </div>
         </div>
