--- a/preview.colorlib.com/theme/instylr/about.html
+++ b/preview.colorlib.com/theme/instylr/about.html
@@ -140,7 +140,7 @@
           </a>
         </div>
         <div class="col-lg-6 col-md-12" style="background-color: azure;  padding-top: 60px; padding-bottom: 50px; text-align: center">
-          <ul style="list-style-type: none;">
+          <ul style="list-style-type: none; text-align: left"">
             <h3>Fair and equal</h3> <br>
             <li><i class="fa fa-angle-double-right"></i>   Fair jobs for all.</li>
             <li><i class="fa fa-angle-double-right"></i>   Inclusive and diverse workplaces and communitie.</li>
